Changelog for Touchdown
=======================

0.15.6 (unreleased)
-------------------

- VPC: Support VPC Endpoints. These allow private network interfaces to access
  S3 without needing NAT etc.


0.15.5 (2016-08-24)
-------------------

- Core: Various serialization fixes regarding detection of 'pending' resources.


0.15.4 (2016-08-24)
-------------------

- Provisioner: Provisioner explicitly does not participate in destroy goals.

- AWS EC2: Wait for EC2 instance to be properly terminated


0.15.3 (2016-08-24)
-------------------

- AWS Events: Clean up targets before trying to delete rules.


0.15.2 (2016-08-16)
-------------------

- AWS EC2: Support `user_data` for ec2 instances.


0.15.1 (2016-08-15)
-------------------

- AWS EBS: Fix validation for volume_attachments. Certain operations expected
  it to have a name, which is not the case.

- SSH: Fix portforward cmd line entry point, which was incorrectly parsing port
  specifications.

- Core: Some graph walking helpers were added to help testing.


0.15.0 (2016-08-12)
-------------------

- AWS STS: Add `touchdown get-credentials ROLENAME`. This allows touchdown to
  generate some temporary credentials and set them in the environment. The goal
  of this feature is that you will be able to do this:

    $ eval `touchdown get-credentials ROLE`
    $ (deployment) awscli s3 sync ....

  But for now the progress bar is also on stdout which stops this working.

- AWS EC2: Add support for attaching EBS Volumes to EC2 Instances.

- AWS EC2: Touchdown now waits after creating a Volume before trying to use it
  with other resources.

- SSH: Basic portforwarding rules can now be attached to SSH connections:

    ssh_connection.add_port_forward(
        name='db',
        hostname='localhost',
        port=5432,
    )

  This will allow you to connect to port 5432 on localhost (relative to the
  machine you have SSH'd to) with:

      touchdown portfwd db=8093
