@@ -7,7 +7,6 @@ ecdsa==0.13
 six==1.10.0
 fuselage==1.0.0
 demjson
-progressbar2==3.6.2
 cryptography==1.3.2
 python-gnupg==0.3.8
 
