@@ -7,6 +7,8 @@ Changelog for Touchdown
 - VPC: Support VPC Endpoints. These allow private network interfaces to access
   S3 without needing NAT etc.
 
+- Core: progressbar2 integration has been removed.
+
 
 0.15.5 (2016-08-24)
 -------------------
